# qkc-mining-assistant

./: .gitignore  Cargo.toml  README.md
qkc-mining-assistant/: Cargo.toml
qkc-mining-assistant/src/: allowances.rs  main.rs
qkc-web3-rs/: Cargo.toml
qkc-web3-rs/src/: lib.rs
qkc-web3-rs/src/qkc/: abi.json  mod.rs
qkc-web3-rs/src/types/: mod.rs
